--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "aws s3 sync build/ s3://meskot",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
