--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 #client secrets
-/secrets
+/secret
 
 # dependencies
 /node_modules
