--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "@types/react": "^16.4.16",
     "auth0-js": "^9.8.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-google-login": "^3.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
