--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.5.1",
     "@types/react": "^16.4.16",
     "auth0-js": "^9.8.2",
+    "material-ui": "^0.20.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-google-login": "^3.2.1",
