--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "deploy": "aws s3 sync build/ s3://shumai.co.uk --region eu-west-2",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-config-google": "^0.11.0"
   }
 }
