--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@material-ui/core": "^3.5.1",
     "@types/react": "^16.4.16",
     "auth0-js": "^9.8.2",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.1.0",
     "material-ui": "^0.20.2",
+    "prettier": "^1.15.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-google-login": "^3.2.1",
@@ -14,7 +17,14 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
+  "lint-staged": {
+   "src/**/*.{js,jsx,json,css}": [
+     "prettier --single-quote --write",
+     "git add"
+   ]
+ },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "aws s3 sync build/ s3://shumai.co.uk --region eu-west-2",
