--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.5.1",
     "@types/react": "^16.4.16",
+    "animejs": "^3.0.1",
     "auth0-js": "^9.8.2",
     "husky": "^1.2.0",
     "lint-staged": "^8.1.0",
